force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/SnapShot_CL_Incomlend_Limit_utilisation__c.object-meta.xml
<CustomObject>
    <label>SnapShot CL Incomlend Limit utilisation</label>
    <nameField>
        <label>SnapShot CL Incomlend Limit utilisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShots CL Incomlend Limit utilisation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>