force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Buyer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account_Name__c</fullName>
    <label>Buyer: Account Name  ↓</label>
    <length>255</length>
    <type>Text</type>
</CustomField>