force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Buyer_Credit_Limit_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Credit_Limit_USD_Equiv__c</fullName>
    <label>Buyer Credit Limit USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>