force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/CL_USD_Incomlend_for_this_Map__c.field-meta.xml
<CustomField>
    <fullName>CL_USD_Incomlend_for_this_Map__c</fullName>
    <label>CL USD Incomlend for this Map</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>