force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Credit_Limit_Provided_by_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Provided_by_Insurer__c</fullName>
    <label>Credit Limit Provided by Insurer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>