force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Custom_product_custom_product_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_product_custom_product_Name__c</fullName>
    <label>Custom product: custom product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>