force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Incomlend_Limit_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Limit_Utilization__c</fullName>
    <label>Incomlend Limit Utilization</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>