force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/map_onboarding_stage__c.field-meta.xml
<CustomField>
    <fullName>map_onboarding_stage__c</fullName>
    <label>map onboarding stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>