force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/number_of_invoices_in_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>number_of_invoices_in_last_12_months__c</fullName>
    <label>number of invoices in last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>