force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Potential_CL_increment_available__c.field-meta.xml
<CustomField>
    <fullName>Potential_CL_increment_available__c</fullName>
    <label>Potential CL increment available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>