force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Supplier_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Name__c</fullName>
    <label>Supplier: Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>