force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/fields/Supplier_Buyer_Map_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map_ID__c</fullName>
    <label>Supplier Buyer Map ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>