force-app/main/default/objects/SnapShot_CL_Incomlend_Limit_utilisation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Potential_CL_increment_available__c</columns>
    <columns>Incomlend_Limit_Utilization__c</columns>
    <columns>Credit_Limit_Provided_by_Insurer__c</columns>
    <columns>Inprogress_invoice_amount_usd_equiv__c</columns>
    <columns>CL_USD_Incomlend_for_this_Map__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>